--- a/works.html
+++ b/works.html
@@ -103,14 +103,14 @@ FACEBOOK: https://www.facebook.com/themefisher
               <li><a href="#" data-filter=".R">R</a></li>
               <li><a href="#" data-filter=".Tableau">Tableau</a></li>
               <li><a href="#" data-filter=".Python">Python</a></li>
-              <li><a href="#" data-filter=".Slideshow">Slideshow</a></li>
+              <li><a href="#" data-filter=".Spreadsheets">Spreadsheets</a></li>
             </ul>
           </div>
         </div>
 
         <div class="row isotope-gutter">
           <a href="projects/bellabeat_report_2022_11_07.html">
-          <div class="col-xs-12 col-sm-6 col-md-4 R Slideshow">
+          <div class="col-xs-12 col-sm-6 col-md-4 R Spreadsheets">
             <figure class="works-item">
               <img src="images/works/1.jpg" alt="">
               <div class="overlay"></div>
@@ -122,7 +122,7 @@ FACEBOOK: https://www.facebook.com/themefisher
             </a>
           </div>
           <a href="projects/lead_keynote.html">
-          <div class="col-xs-12 col-sm-6 col-md-4 Slideshow">
+          <div class="col-xs-12 col-sm-6 col-md-4 Spreadsheets">
             <figure class="works-item">
               <img src="images/works/2.jpg" alt="">
               <div class="overlay"></div>
