--- a/resume.html
+++ b/resume.html
@@ -165,6 +165,9 @@ FACEBOOK: https://www.facebook.com/themefisher
                   <div class="history-text">
                     <h5>Data Analyst, Case Studies</h5>
                     <span>2022 - present</span>
+                    <p>Created a case study using Fitbit public data, prompting more thorough and comprehensive data collection practice.</p>
+                    <p>Analyzed lead in Texas school water supplies, discovered high levels of lead in Bexar county water.</p>
+                    <p>Tracks physical fitness to improve personal strength training.</p>
                   </div>
                 </div>
                 <!-- /.history-item -->
