Fixed bellabeat keynote html file
oops

--- a/works.html
+++ b/works.html
@@ -127,7 +127,7 @@ FACEBOOK: https://www.facebook.com/themefisher
               <img src="images/works/3.jpg" alt="">
               <div class="overlay"></div>
               <figcaption class="works-inner">
-                <h4>Bellabeat's Keynote</h4>
+                <h4>Bellabeat Keynote</h4>
                 <p>The presentation for the Bellabeat Report.</p>
               </figcaption>
             </figure>
