--- a/contact.html
+++ b/contact.html
@@ -105,7 +105,7 @@ FACEBOOK: https://www.facebook.com/themefisher
                   </div>
                   <div class="media-body">
                     <h4>Email</h4>
-                    <p><a href="mailto:ccreevan@gmail.com">ccreevan@@gmail.com</a></p>
+                    <p><a href="mailto:ccreevan@gmail.com">ccreevan@gmail.com</a></p>
                   </div>
                 </div>
               </div>
@@ -125,7 +125,7 @@ FACEBOOK: https://www.facebook.com/themefisher
               <ul class="contact-social">
                 <li>
                   <span class="contact-social-hex"></span>
-                  <a href="linkedin.com/in/chriscreevan-123/"><i class="tf-ion-social-linkedin"></i></a>
+                  <a href="https://linkedin.com/in/chriscreevan-123/"><i class="tf-ion-social-linkedin"></i></a>
                 </li>
               </ul>
             </div>
