--- a/about.html
+++ b/about.html
@@ -91,7 +91,7 @@ FACEBOOK: https://www.facebook.com/themefisher
           <div class="col-xs-12 col-md-offset-1 col-md-10 col-lg-offset-2 col-lg-8">
             <div class="page-title text-center">
               <h2>About <span class="primary">me</span> <span class="title-bg">Name</span></h2>
-              <p>I am an up-and-coming data analyst with a 15-year background in graphic design. I have put together case studies and company presentations for business and marketing decisions for over 10 years.</p>
+              <p>I am data analyst with a 15-year background in graphic design. I have put together case studies and company presentations for business and marketing decisions for over 10 years.</p>
             </div>
           </div>
 
@@ -103,12 +103,12 @@ FACEBOOK: https://www.facebook.com/themefisher
               <div class="author-desc">
                 <p><b>Date of birth:</b> 24th july, 1987</p>
                 <p><b>Language:</b> English</p>
-                <p><b>Expert in:</b> R, Graphic Design (Adobe products)</p>
-                <p><b>Proficiency in:</b> Python, SQL</p>
+                <p><b>Expert in:</b> Graphic Design (Adobe products)</p>
+                <p><b>Proficiency in:</b>Analysis (SQL, R, Python, Excel)</p>
               </div>
               <!-- /.author-desc -->
             </div> <!-- /.about-author -->
-            <p>I'm a senior graphic designer that has been changing careers to big data and software development for the past year, although I have experience in IT support and customer service.</p>
+            <p>A former senior graphic designer changing careers to big data and software development, with experience in IT support and customer service. My focus is process improvement.</p>
           </div> <!-- /.col -->
 
           <div class="col-xs-12 col-md-6">
@@ -128,35 +128,21 @@ FACEBOOK: https://www.facebook.com/themefisher
                 <div class="skill-bar">
                   <div class="bar"></div>
                 </div>
-                <div class="skill-lavel" data-skill-value="50%"></div>
+                <div class="skill-lavel" data-skill-value="80%"></div>
               </div> <!-- /.progress -->
               <div class="progress clear">
                 <div class="skill-name">Spreadsheets</div>
                 <div class="skill-bar">
                   <div class="bar"></div>
                 </div>
-                <div class="skill-lavel" data-skill-value="90%"></div>
+                <div class="skill-lavel" data-skill-value="100%"></div>
               </div> <!-- /.progress -->
               <div class="progress clear">
                 <div class="skill-name">Python</div>
                 <div class="skill-bar">
                   <div class="bar"></div>
                 </div>
-                <div class="skill-lavel" data-skill-value="65%"></div>
-              </div> <!-- /.progress -->
-              <div class="progress clear">
-                  <div class="skill-name">Photoshop</div>
-                <div class="skill-bar">
-                  <div class="bar"></div>
-                </div>
-                <div class="skill-lavel" data-skill-value="90%"></div>
-              </div> <!-- /.progress -->
-              <div class="progress clear">
-                <div class="skill-name">Illustrator</div>
-                <div class="skill-bar">
-                  <div class="bar"></div>
-                </div>
-                <div class="skill-lavel" data-skill-value="75%"></div>
+                <div class="skill-lavel" data-skill-value="85%"></div>
               </div> <!-- /.progress -->
             </div> <!-- /.skill-wrapper -->
           </div> <!-- /.col -->
