--- a/welcome.html
+++ b/welcome.html
@@ -95,8 +95,8 @@ FACEBOOK: https://www.facebook.com/themefisher
           <div class="col-xs-12 col-md-6 col-lg-7">
             <div class="page-title">
               <h2>Chris <span class="primary">Creevan</span> <span class="title-bg">About</span></h2>
-              <p>Born and raised in Texas, I focus on big data. Analysis, reporting, and presenting my findings to help inform stakeholders what to do next.</p>
-              <p>My future focus is healthcare and a deeper dive into the world of big data with prospects as a data architect and software developer.</p>
+              <p>Born and raised in Texas, I focus on big data and process improvement. Analysis, reporting, and presenting my findings to help inform stakeholders what to do next.</p>
+              <p>My future focus is finance and a deeper dive into the big data with prospects as a data architect and software developer.</p>
             </div>
           </div>
         </div> <!-- /.row -->
