--- a/resume.html
+++ b/resume.html
@@ -146,6 +146,19 @@ FACEBOOK: https://www.facebook.com/themefisher
               </div>
               <!-- /.section-title -->
               <div class="history-scroller">
+                  <div class="history-item">
+                  <div class="history-icon">
+                    <span class="history-hex"></span>
+                    <i class="tf-documents5"></i>
+                  </div>
+                  <div class="history-text">
+                    <h5>Data Analyst, Greenberg Grant & Richards</h5>
+                    <span>2023 - present</span>
+                    <p>Standardized & improved bulk data import process.</p>
+                    <p>Wrote scripts in python and SQL to automate client data import and reporting.</p>
+                    <p>Wrote policy & trained staff on new import process.</p>
+                  </div>
+                </div>
                 <div class="history-item">
                   <div class="history-icon">
                     <span class="history-hex"></span>
