--- a/works.html
+++ b/works.html
@@ -145,6 +145,18 @@ FACEBOOK: https://www.facebook.com/themefisher
             </figure>
             </a>
           </div>
+          <a href="projects/phone-analytics.html">
+          <div class="col-xs-12 col-sm-6 col-md-4 Spreadsheets">
+            <figure class="works-item">
+              <img src="images/works/4.jpg" alt="">
+              <div class="overlay"></div>
+              <figcaption class="works-inner">
+                <h4>Phone Analytics</h4>
+                <p>SQL sales stats to PowerBI.</p>
+              </figcaption>
+            </figure>
+            </a>
+          </div>
           <a href="#">
           <div class="col-xs-12 col-sm-6 col-md-4 filter">
             <figure class="works-item">
