--- a/resume.html
+++ b/resume.html
@@ -154,8 +154,8 @@ FACEBOOK: https://www.facebook.com/themefisher
                   <div class="history-text">
                     <h5>Data Analyst, Greenberg Grant & Richards</h5>
                     <span>2023 - present</span>
-                    <p>Standardized & improved bulk data import process.</p>
-                    <p>Wrote scripts in python and SQL to automate client data import and reporting.</p>
+                    <p>Standardized & improved extract/transform/load for clients.</p>
+                    <p>Wrote python and SQL code to automate client data import and reporting.</p>
                     <p>Wrote policy & trained staff on new import process.</p>
                   </div>
                 </div>
