phone project updated
updated phone project and resume for 2024

--- a/resume.html
+++ b/resume.html
@@ -154,9 +154,10 @@ FACEBOOK: https://www.facebook.com/themefisher
                   <div class="history-text">
                     <h5>Data Analyst, Greenberg Grant & Richards</h5>
                     <span>2023 - present</span>
-                    <p>Standardized & improved extract/transform/load for clients.</p>
-                    <p>Wrote python and SQL code to automate client data import and reporting.</p>
-                    <p>Wrote policy & trained staff on new import process.</p>
+                    <p>Recovered over $160,000 in disregarded business through ad hoc data analysis.</p>
+                    <p>Created data pipelines with VBA, python, and SQL for an 18% increase in ETL speed.</p>
+                    <p>Built and maintained special-project SQL databases for IT team and stakeholders.</p>
+                    <p>Mentored colleagues on Excel for 50%+ improvement in ETL accuracy.</p>
                   </div>
                 </div>
                 <div class="history-item">
